<resources>
    <string name="app_name">SurfGallery</string>
    <string name="empty_string" />
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_enter_label">Вход</string>
    <string name="login_enter_button_label">Войти</string>
    <string name="tf_login_hint">Логин</string>
    <string name="tf_password_hint">Пароль</string>
    <string name="surf_logo">surf logo</string>
    <string name="unknown_error_message">Неизвестная ошибка</string>
    <string name="wrong_login_length_error_message">Неверный формат номера телефона</string>
    <string name="empty_login_error_message">Поле не может быть пустым</string>
    <string name="wrong_password_length_error_message">Пароль должен быть от 6 до 255 символов</string>
    <string name="empty_password_error_message">Поле не может быть пустым</string>
    <string name="unknown_host_error_message">Отсутствует интернет-соединение\nПопробуйте позже</string>
    <string name="invalid_credentials_error_message">Логин или пароль введен неправильно</string>
    <string name="user_is_disabled_error_message">Время активной сессии истекло</string>
    <string name="bottom_nav_gallery_title">Главная</string>
    <string name="bottom_nav_favorites_title">Избранное</string>
    <string name="bottom_nav_profile_title">Профиль</string>
    <string name="gallery_title">Галерея</string>
    <string name="search_button">search_button</string>
    <string name="picture_item_desc">picture</string>
    <string name="like_image_desc">like image</string>
    <string name="update_button_label">Обновить</string>
    <string name="error_icon">error icon</string>
    <string name="login_error">Не удалось загрузить ленту\nОбновите экран или попробуйте позже</string>
    <string name="profile_title">Профиль</string>
    <string name="user_avatar">user avatar</string>
    <string name="profile_town_label">Город</string>
    <string name="profile_phone_label">Телефон</string>
    <string name="profile_email_label">Почта</string>
    <string name="profile_exit_button_label">Выйти</string>
    <string name="dialog_cancel_label">Нет</string>
    <string name="dialog_message">Вы точно хотите выйти из\nприложения?</string>
    <string name="dialog_accept_label">да, точно</string>
    <string name="logout_error_label">Не удалось выйти, попробуйте еще раз</string>
    <string name="back_button">back button</string>
    <string name="search_field_label">Поиск</string>
    <string name="initial_search_state">Введите ваш запрос</string>
    <string name="error_search_state">"По этому запросу нет результатов,\nпопробуйте другой запрос"</string>
    <string name="favorites_title">Мои избранные</string>
    <string name="empty_favorites">В избранном пусто</string>
</resources>