<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rc_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="16dp"
        android:paddingTop="60dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_top_bar" />

    <LinearLayout
        android:id="@+id/ll_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="9dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"
            android:background="@color/transparent"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_back" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/tf_search_edit"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@drawable/rounded_edit_text"
                android:clickable="true"
                android:drawableStart="@drawable/ic_search_bar"
                android:drawablePadding="10dp"
                android:focusable="true"
                android:hint="@string/search_field_label"
                android:inputType="text"
                android:paddingHorizontal="10dp"
                android:textAppearance="@style/TextAppearance.SurfGallery.SearchText"
                android:textCursorDrawable="@drawable/cursor" />

            <Button
                android:id="@+id/button_clear"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ic_clear"
                android:visibility="gone"
                tools:ignore="RtlHardcoded"/>

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/error_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_initial_state"
            android:contentDescription="@string/error_icon"
            android:layout_marginBottom="12dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/error_text"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/initial_search_state"
            android:textAppearance="@style/TextAppearance.SurfGallery.EmptyScreen"
            android:visibility="visible" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>